--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,15 @@
 bbbm ChangeLog
 ----------------------------------------
 
-0.3.2
+0.4
 ----
  - Fixed a bug in the Makefile that did not remove /usr/local/bin/bbbm, but
    tried to remove /usr/local/bbbm instead
  - Fixed a bug that (might) let the program crash if executing the set or view
    command would produce an error; the error is now printed to stderr
  - Using absolute, normalized paths now (i.e. no more /../ or /./)
+ - Added "Sort On Filename" and "Sort On Description" to Edit menu. Sorting is
+   done lexicographically
 
 0.3.1
 -----
