--- a/README
+++ b/README
@@ -26,5 +26,4 @@ Next, as root, type 'make install' to copy the bbbm executable to
 How to contact the author (me):
 ----------------------------------------
 Just E-mail all bugreports (and fixes), suggestions or comments to
- ice@iceman13.cjb.net
-and place the word `bbbm' somewhere in the subject.
+ bbbm@icemanx.nl
