--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ bbbm ChangeLog
  - Converted the configuration to use XML. A utility tool (tools/migrate.py) has
    been provided to convert any existing configuration file.
  - The "view" command has been dropped in favor of a custom command
+ - The list of commands is now dynamic. Commands can be added and removed as
+   needed from the options dialog.
  - Added an option to specify a custom configuration file.
  - Added confirmation before deleting images.
 
