--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2015-10-16  rob.spoor  <bbbm@icemanx.nl>
 
+	Released version 0.8
+
+2015-10-16  rob.spoor  <bbbm@icemanx.nl>
+
 	Fixed some memory leaks
 	Added confirmation before deleting commands
 
