Added TODO item. Removed first lines of NEWS because it's no change log

--- a/TODO
+++ b/TODO
@@ -3,4 +3,6 @@ TODO list
 
 - Add support for translations (gettext)
 
+- Add drag&drop support for adding and reordering images
+
 - Optionally store the last location, size and window state
